unpackaged/main/default/objects/Case/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>