unpackaged/main/default/objects/Case/fields/Admin_Case__c.field-meta.xml
<CustomField>
    <fullName>Admin_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked when the case is submitted by an admin, based on the email</description>
    <label>Admin Case</label>
    <type>Checkbox</type>
</CustomField>