unpackaged/main/default/objects/Case/fields/AutoSpam__c.field-meta.xml
<CustomField>
    <fullName>AutoSpam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if the case has been Spamed automatically  by the system</description>
    <label>Auto Spam</label>
    <type>Checkbox</type>
</CustomField>