unpackaged/main/default/objects/Case/fields/Availability2__c.field-meta.xml
<CustomField>
    <fullName>Availability2__c</fullName>
    <label>Availability 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>Old reference</fullName>
            </value>
            <value>
                <fullName>Back in stock</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>