unpackaged/main/default/objects/Case/fields/CaseExternalID__c.field-meta.xml
<CustomField>
    <fullName>CaseExternalID__c</fullName>
    <externalId>true</externalId>
    <label>Case External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>