unpackaged/main/default/objects/Case/fields/Casehasbeenreopened__c.field-meta.xml
<CustomField>
    <fullName>Casehasbeenreopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by worflow when the case is reopen</description>
    <label>Case has been re-opened</label>
    <type>Checkbox</type>
</CustomField>