unpackaged/main/default/objects/Case/fields/CaseLanguage__c.field-meta.xml
<CustomField>
    <fullName>CaseLanguage__c</fullName>
    <label>Case Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>