unpackaged/main/default/objects/Case/fields/Civility__c.field-meta.xml
<CustomField>
    <fullName>Civility__c</fullName>
    <label>Civility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>