unpackaged/main/default/objects/Case/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <label>Claim Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>