unpackaged/main/default/objects/Case/fields/Client_cluster__c.field-meta.xml
<CustomField>
    <fullName>Client_cluster__c</fullName>
    <formula>CASE ( TEXT (Account.PersonContact.LightCurrentCluster__c),

&quot;Dormant_Client_L&quot;, &quot;Dormant Client&quot;,
	&quot;Personal Shopper&quot;, &quot;Personal Shopper&quot;,
&quot;Collab&quot;, &quot;Collab&quot;,
						&quot;Owner&quot;, &quot;Owner&quot;,
						&quot;Company&quot;, &quot;Company&quot;,
						&quot;Dreamer&quot;, &quot;Dreamer&quot;,
						&quot;Employee&quot;, &quot;Employee&quot;,
						&quot;Prospect&quot;, &quot;Prospect&quot;,
						&quot;VIC&quot;, &quot;VIC&quot;,
						&quot;Inactive Client&quot;,&quot;Inactive Client&quot;,
						&quot;One Timer&quot;, &quot;One Timer&quot;,
						&quot;Multi-timer&quot;, &quot;Multi-timer&quot;,
						&quot;Experimenter&quot;, &quot;Experimenter&quot;,
						&quot;Partner&quot;, &quot;Partner&quot;,

TEXT (Account.PersonContact.LightCurrentCluster__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client cluster</label>
    <type>Text</type>
</CustomField>