unpackaged/main/default/objects/Case/fields/Closed_date_CSC__c.field-meta.xml
<CustomField>
    <fullName>Closed_date_CSC__c</fullName>
    <label>Investigation Closed SME</label>
    <type>DateTime</type>
</CustomField>