unpackaged/main/default/objects/Case/fields/ClosingDateCarrier__c.field-meta.xml
<CustomField>
    <fullName>ClosingDateCarrier__c</fullName>
    <label>Closing Date Carrier</label>
    <type>DateTime</type>
</CustomField>