unpackaged/main/default/objects/Case/fields/CommentBody__c.field-meta.xml
<CustomField>
    <fullName>CommentBody__c</fullName>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>