unpackaged/main/default/objects/Case/fields/Contact_reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_reason__c</fullName>
    <label>Contact reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Info on events</fullName>
            </value>
            <value>
                <fullName>Newsletter, catalogue &amp; goodies</fullName>
            </value>
            <value>
                <fullName>Data modification &amp; portability</fullName>
            </value>
            <value>
                <fullName>Right to be forgotten</fullName>
            </value>
            <value>
                <fullName>Recrafted terms</fullName>
            </value>
            <value>
                <fullName>Environmental policy &amp; Sustainability</fullName>
            </value>
            <value>
                <fullName>History &amp; Production site</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Marketing, Collaboration request, Sponsorship, B2B</fullName>
            </value>
            <value>
                <fullName>Client&#39;s idea and suggestions</fullName>
            </value>
            <value>
                <fullName>Technical issue</fullName>
            </value>
            <value>
                <fullName>Browsing &amp; online account assistance</fullName>
            </value>
            <value>
                <fullName>Store info</fullName>
            </value>
            <value>
                <fullName>Store complaints / Compliments</fullName>
            </value>
            <value>
                <fullName>Wholesalers &amp; resellers</fullName>
            </value>
            <value>
                <fullName>Unofficial points of sale</fullName>
            </value>
            <value>
                <fullName>Stock availability e-com</fullName>
            </value>
            <value>
                <fullName>Stock availability retail</fullName>
            </value>
            <value>
                <fullName>Price info, sales &amp; discounts</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Airline compatibility</fullName>
            </value>
            <value>
                <fullName>Limited editions &amp; Collaborations</fullName>
            </value>
            <value>
                <fullName>Packaging, gift wrapping &amp; hot stamping</fullName>
            </value>
            <value>
                <fullName>Care instructions</fullName>
            </value>
            <value>
                <fullName>Payment &amp; shipping terms</fullName>
            </value>
            <value>
                <fullName>Warranty information</fullName>
            </value>
            <value>
                <fullName>Store reservation</fullName>
            </value>
            <value>
                <fullName>Order on behalf information</fullName>
            </value>
            <value>
                <fullName>Order on behalf converted</fullName>
            </value>
            <value>
                <fullName>Order follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>