unpackaged/main/default/objects/Case/fields/Created_date_CSC__c.field-meta.xml
<CustomField>
    <fullName>Created_date_CSC__c</fullName>
    <label>Created date CSC</label>
    <type>DateTime</type>
</CustomField>