unpackaged/main/default/objects/Case/fields/CSC_CaseOwnerName__c.field-meta.xml
<CustomField>
    <fullName>CSC_CaseOwnerName__c</fullName>
    <label>CSC CaseOwner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>