unpackaged/main/default/objects/Case/fields/CSC_CaseRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>CSC_CaseRecordTypeName__c</fullName>
    <label>CSC Case RecordType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>