unpackaged/main/default/objects/Case/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <description>Used to sync the case with the contact that will be inserted at D+1</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>