unpackaged/main/default/objects/Case/fields/CustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>CustomerFeedback__c</fullName>
    <label>Customer Feedback</label>
    <type>TextArea</type>
</CustomField>