unpackaged/main/default/objects/Case/fields/Date_Last_interaction__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_interaction__c</fullName>
    <label>Date Last interaction</label>
    <type>DateTime</type>
</CustomField>