unpackaged/main/default/objects/Case/fields/Email_formula_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_formula_Template__c</fullName>
    <formula>if(
				ISBLANK(Account.PersonContact.Email), 
				SuppliedEmail,
				Account.PersonContact.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email formula Template</label>
    <type>Text</type>
</CustomField>