unpackaged/main/default/objects/Case/fields/EngineeringReqNumber__c.field-meta.xml
<CustomField>
    <fullName>EngineeringReqNumber__c</fullName>
    <label>Engineering Req Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    
</CustomField>