unpackaged/main/default/objects/Case/fields/First_Name_formula_Template__c.field-meta.xml
<CustomField>
    <fullName>First_Name_formula_Template__c</fullName>
    <formula>if(
 ISBLANK(Account.PersonContact.FirstName),
	if(
					ISBLANK(FirstNameSupplied__c),
					FirstName__c,
					FirstNameSupplied__c
	),
	Account.PersonContact.FirstName
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name formula Template</label>
    <type>Text</type>
</CustomField>