unpackaged/main/default/objects/Case/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Customer First Name, provided from Web form.
Use for case Account matching automated by Flow</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>