unpackaged/main/default/objects/Case/fields/FirstNameSupplied__c.field-meta.xml
<CustomField>
    <fullName>FirstNameSupplied__c</fullName>
    <formula>LEFT(SuppliedName,Find(&quot; &quot;, SuppliedName)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstNameSupplied</label>
    <type>Text</type>
</CustomField>