unpackaged/main/default/objects/Case/fields/FirstResponseTime__c.field-meta.xml
<CustomField>
    <fullName>FirstResponseTime__c</fullName>
    <description>The date and time, the agent sent the first email to the client
--&gt; Update by a Flow</description>
    <label>First Response Time</label>
    <type>DateTime</type>
</CustomField>