unpackaged/main/default/objects/Case/fields/FromEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>FromEmailAddress__c</fullName>
    <description>The From email address that the Customer contact for.
Update via Flow
Hub origin email address (Email &quot;From&quot; action)</description>
    <label>FromEmailAddress</label>
    <type>Email</type>
</CustomField>