unpackaged/main/default/objects/Case/fields/HasAccount__c.field-meta.xml
<CustomField>
    <fullName>HasAccount__c</fullName>
    <description>Equals true, If the case has an associated account</description>
    <formula>IF(
    NOT(ISBLANK(AccountId)),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasAccount</label>
    <type>Checkbox</type>
</CustomField>