unpackaged/main/default/objects/Case/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <description>this field is feeded by Service cloud for the Client Cologne</description>
    <inlineHelpText>The customer&#39;s original call center</inlineHelpText>
    <label>Hub</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCC.NA.US01</fullName>
            </value>
            <value>
                <fullName>CSC.NA.US01</fullName>
            </value>
            <value>
                <fullName>CCC.EU.DE01</fullName>
            </value>
            <value>
                <fullName>CSC.EU.EU01</fullName>
            </value>
            <value>
                <fullName>CSC.JP.JP01</fullName>
            </value>
            <value>
                <fullName>CCC.JP.JP01</fullName>
            </value>
            <value>
                <fullName>CSC.AS.AU01</fullName>
            </value>
            <value>
                <fullName>CSC.AS.KR01</fullName>
            </value>
            <value>
                <fullName>CCC.AS.AU01</fullName>
            </value>
            <value>
                <fullName>CCC.NA.US.01</fullName>
            </value>
            <value>
                <fullName>CCC.NA.US.02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>