unpackaged/main/default/objects/Case/fields/HUB_Handle__c.field-meta.xml
<CustomField>
    <fullName>HUB_Handle__c</fullName>
    <label>HUB Handle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>KOR</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>DEUKO1</fullName>
            </value>
            <value>
                <fullName>USANY1</fullName>
            </value>
            <value>
                <fullName>USATO1</fullName>
            </value>
            <value>
                <fullName>JAPOS1</fullName>
            </value>
            <value>
                <fullName>JAPSO1</fullName>
                <isActive>false</isActive>
                <label>JAPSO1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>