unpackaged/main/default/objects/Case/fields/Hub_Origin__c.field-meta.xml
<CustomField>
    <fullName>Hub_Origin__c</fullName>
    <label>Hub Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>JAPOS1</fullName>
            </value>
            <value>
                <fullName>USANY1</fullName>
            </value>
            <value>
                <fullName>USATO1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>