unpackaged/main/default/objects/Case/fields/InvestigationStatus__c.field-meta.xml
<CustomField>
    <fullName>InvestigationStatus__c</fullName>
    <label>Investigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Investigation closed - Reimbursed</fullName>
            </value>
            <value>
                <fullName>Investigation closed - Waiting SME</fullName>
            </value>
            <value>
                <fullName>Investigation closed - Waiting for client</fullName>
            </value>
            <value>
                <fullName>Investigation closed - Denied</fullName>
            </value>
            <value>
                <fullName>Investigation closed - New product sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>