unpackaged/main/default/objects/Case/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>