unpackaged/main/default/objects/Case/fields/IsPublished__c.field-meta.xml
<CustomField>
    <fullName>IsPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>