unpackaged/main/default/objects/Case/fields/isTransferred__c.field-meta.xml
<CustomField>
    <fullName>isTransferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this case has been transferred to another Hub in LVMH org (Updated via Case Push)
This filed is used to follow the case transfers in LVMH Client Services Org.</description>
    <inlineHelpText>If true this case has been transferred from one Hub to another in LVMH CS Org.</inlineHelpText>
    <label>isTransferred</label>
    <type>Checkbox</type>
</CustomField>