unpackaged/main/default/objects/Case/fields/Last_Name_formula_Template__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_formula_Template__c</fullName>
    <formula>if(
ISBLANK(Account.PersonContact.LastName),    
if(
  ISBLANK(LastNameSupplied__c),
 LastName__c ,
LastNameSupplied__c
),
Account.PersonContact.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name formula Template</label>
    <type>Text</type>
</CustomField>