unpackaged/main/default/objects/Case/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Customer Last Name provided from Web form.
Use for case Account matching automated by Flow</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>