unpackaged/main/default/objects/Case/fields/LastNameSupplied__c.field-meta.xml
<CustomField>
    <fullName>LastNameSupplied__c</fullName>
    <formula>RIGHT(SuppliedName,LEN(SuppliedName)-Find(&quot; &quot;, SuppliedName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastNameSupplied</label>
    <type>Text</type>
</CustomField>