unpackaged/main/default/objects/Case/fields/MaisonID__c.field-meta.xml
<CustomField>
    <fullName>MaisonID__c</fullName>
    <label>Maison ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>