unpackaged/main/default/objects/Case/fields/ManualSpam__c.field-meta.xml
<CustomField>
    <fullName>ManualSpam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if the case has been Spamed manually by an agent</description>
    <label>Manual Spam</label>
    <type>Checkbox</type>
</CustomField>