unpackaged/main/default/objects/Case/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>