unpackaged/main/default/objects/Case/fields/Market_zone__c.field-meta.xml
<CustomField>
    <fullName>Market_zone__c</fullName>
    <label>Market zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>