unpackaged/main/default/objects/Case/fields/MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Record Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>