unpackaged/main/default/objects/Case/fields/NegativeFeedback__c.field-meta.xml
<CustomField>
    <fullName>NegativeFeedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negative feedback</label>
    <type>Checkbox</type>
</CustomField>