unpackaged/main/default/objects/Case/fields/No_Trigger_DUE__c.field-meta.xml
<CustomField>
    <fullName>No_Trigger_DUE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update via case push from LVMH CS org</description>
    <label>No Trigger DUE</label>
    <type>Checkbox</type>
</CustomField>