unpackaged/main/default/objects/Case/fields/OOBorReservationOrigin__c.field-meta.xml
<CustomField>
    <fullName>OOBorReservationOrigin__c</fullName>
    <label>OOB or Reservation Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Back In Stock Call</fullName>
            </value>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Return Request</fullName>
            </value>
            <value>
                <fullName>Payment Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>