unpackaged/main/default/objects/Case/fields/OpeningDateCarrier__c.field-meta.xml
<CustomField>
    <fullName>OpeningDateCarrier__c</fullName>
    <label>Opening Date Carrier</label>
    <type>DateTime</type>
</CustomField>