unpackaged/main/default/objects/Case/fields/Order_Number2__c.field-meta.xml
<CustomField>
    <fullName>Order_Number2__c</fullName>
    <label>Order Number	2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>