unpackaged/main/default/objects/Case/fields/Order_Number3__c.field-meta.xml
<CustomField>
    <fullName>Order_Number3__c</fullName>
    <label>Order Number	3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>