unpackaged/main/default/objects/Case/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer Phone provided from Web form / CTI.
Use for case Account matching automated by Flow</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>