unpackaged/main/default/objects/Case/fields/Phone_formula_Template__c.field-meta.xml
<CustomField>
    <fullName>Phone_formula_Template__c</fullName>
    <formula>if(
   ISBLANK(Account.PersonContact.Phone),
			if(
						 ISBLANK(SuppliedPhone) ,
							Phone__c,
							SuppliedPhone
							
			),		
			Account.PersonContact.Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone formula Template</label>
    <type>Text</type>
</CustomField>