unpackaged/main/default/objects/Case/fields/PositiveFeedback__c.field-meta.xml
<CustomField>
    <fullName>PositiveFeedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Positive feedback</label>
    <type>Checkbox</type>
</CustomField>