unpackaged/main/default/objects/Case/fields/Product_Range_Detail2__c.field-meta.xml
<CustomField>
    <fullName>Product_Range_Detail2__c</fullName>
    <label>Product Range Detail 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>