unpackaged/main/default/objects/Case/fields/Product_Range_Detail_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Range_Detail_3__c</fullName>
    <label>Product Range Detail 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>