unpackaged/main/default/objects/Case/fields/Product_reference2__c.field-meta.xml
<CustomField>
    <fullName>Product_reference2__c</fullName>
    <label>Product reference 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>