unpackaged/main/default/objects/Case/fields/Product_reference3__c.field-meta.xml
<CustomField>
    <fullName>Product_reference3__c</fullName>
    <label>Product reference 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>